--- a/devanagiri-converter.html
+++ b/devanagiri-converter.html
@@ -10,6 +10,7 @@
             padding: 10px;
             margin: 10px 0;
             white-space: pre-wrap;
+            font-family: "Courier New", Courier, monospace;
         }
     </style>
 </head>
@@ -67,27 +68,16 @@
 
         // Show reference text
         document.getElementById('reference').textContent = `
-vowels:
-a   A   e   E   u   U   R
-ae  i   O   w  -m  -H
-
-consonants:
-k   K   g   G  gn
-c   C   j   J  gy
-t   T   d   D  N
-th  Th  dh  Dh n
-p   P   b   B  m
-y   r   l   v
-sh  Sh  s   h
-
-Modifiers:
--h (halant)  -s (swara)  -a (anudatta)  -d (double swara)
-
-Other chars:
-om(Om)  hbi (chandrabindu-halant)  bi(chandrabindu)
-; (one-line)     . (double-lines)   sa (avagraha)
-
-        `;
+consonants:       | vowels:
+k   K   g   G  gn | a   A   e   E   u   U   R
+c   C   j   J  gy | ae  i   O   w  -m  -H
+t   T   d   D  N  |---------------------------
+th  Th  dh  Dh n  | Modifiers:
+p   P   b   B  m  | -h (halant)  -s (swara)  -a (anudatta)  -d (double swara)
+y   r   l   v     |---------------------------
+sh  Sh  s   h     | Other chars:
+                  | om(Om)  hbi (chandrabindu-halant)  bi(chandrabindu)
+                  | ; (one-line)     . (double-lines)   sa (avagraha)`;
 
         // Convert Devanagari to English mapping
         document.getElementById('inputText').addEventListener('input', function(e) {
