0-9 in devna chars and times-files in tutor as just arg

--- a/devanagiri-converter.html
+++ b/devanagiri-converter.html
@@ -58,7 +58,10 @@
             '-h': '\u094d', '-A': '\u093e', '-e': '\u093f', '-E': '\u0940',
             '-u': '\u0941', '-U': '\u0942', '-R': '\u0943', '-ae': '\u0947',
             '-i': '\u0948', '-O': '\u094b', '-w': '\u094c', '-m': '\u0902',
-            '-H': '\u0903', '-s': '\u0951', '-a': '\u0952', '-d': '\u1cda'
+            '-H': '\u0903', '-s': '\u0951', '-a': '\u0952', '-d': '\u1cda',
+            '0': '\u0966', '1': '\u0967', '2': '\u0968', '3': '\u0969',
+            '4': '\u096a', '5': '\u096b', '6': '\u096c', '7': '\u096d',
+            '8': '\u096e', '9': '\u096f'
         };
 
         // Reverse mapping
