windows_popup_tcp.pyw and dot-added to devanagri

--- a/devanagiri-converter.html
+++ b/devanagiri-converter.html
@@ -51,7 +51,7 @@
             'y': '\u092f', 'r': '\u0930', 'l': '\u0932', 'v': '\u0935',
             'sh': '\u0936', 'Sh': '\u0937', 's': '\u0938', 'h': '\u0939',
             'om': '\u0950', 'bi': '\u0901', 'hbi': '\ua8f3', ';': '\u0964', '.': '\u0965',
-            'sa': '\u093d', 'sp': ' ', 'nl': '\n', 'cm': ',', 'hy': '-',
+            'sa': '\u093d', 'do': '\u002e', 'sp': ' ', 'nl': '\n', 'cm': ',', 'hy': '-',
             'a': '\u0905', 'A': '\u0906', 'e': '\u0907', 'E': '\u0908', 
             'u': '\u0909', 'U': '\u090a', 'R': '\u090b', 'ae': '\u090f',
             'i': '\u0910', 'O': '\u0913', 'w': '\u0914',
@@ -80,7 +80,8 @@ p   P   b   B  m  | -h (halant)  -s (swara)  -a (anudatta)  -d (double swara)
 y   r   l   v     |---------------------------
 sh  Sh  s   h     | Other chars:
                   | om(Om)  hbi (chandrabindu-halant)  bi(chandrabindu)
-                  | ; (one-line)     . (double-lines)   sa (avagraha)`;
+                  | ; (one-line)     . (double-lines)   sa (avagraha)
+                  | do (full-stop)`;
 
         // Convert Devanagari to English mapping
         document.getElementById('inputText').addEventListener('input', function(e) {
