--- a/devanagiri-converter.html
+++ b/devanagiri-converter.html
@@ -50,9 +50,10 @@
             'p': '\u092a', 'P': '\u092b', 'b': '\u092c', 'B': '\u092d', 'm': '\u092e',
             'y': '\u092f', 'r': '\u0930', 'l': '\u0932', 'v': '\u0935',
             'sh': '\u0936', 'Sh': '\u0937', 's': '\u0938', 'h': '\u0939',
-            'om': '\u0950', 'bi': '\u0901', 'hbi': '\ua8f3', ';': '\u0964', '.': '\u0965',
+            'om': '\u0950', 'bi': '\ua8f2', 'hbi': '\ua8f3', ';': '\u0964', '.': '\u0965',
+            '-bi': '\u0901',
             'sa': '\u093d', 'do': '\u002e', 'sp': ' ', 'nl': '\n', 'cm': ',', 'hy': '-',
-            'a': '\u0905', 'A': '\u0906', 'e': '\u0907', 'E': '\u0908', 
+            'a': '\u0905', 'A': '\u0906', 'e': '\u0907', 'E': '\u0908',
             'u': '\u0909', 'U': '\u090a', 'R': '\u090b', 'ae': '\u090f',
             'i': '\u0910', 'O': '\u0913', 'w': '\u0914',
             '-h': '\u094d', '-A': '\u093e', '-e': '\u093f', '-E': '\u0940',
@@ -79,7 +80,7 @@ th  Th  dh  Dh n  | Modifiers:
 p   P   b   B  m  | -h (halant)  -s (swara)  -a (anudatta)  -d (double swara)
 y   r   l   v     |---------------------------
 sh  Sh  s   h     | Other chars:
-                  | om(Om)  hbi (chandrabindu-halant)  bi(chandrabindu)
+                  | om(Om)  hbi (chandrabindu-halant)  bi(chandrabindu) -bi
                   | ; (one-line)     . (double-lines)   sa (avagraha)
                   | do (full-stop)`;
 
